Opened 15 years ago

Closed 10 years ago

#5734 closed bug (fixed)

Dead key display issues

Reported by: andreasf Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences/Keymap Version: R1/Development
Keywords: Cc: mdisreali@…
Blocked By: Blocking:
Platform: All

Description

After trying the dead keys, the secondary keys remain yellow-colored and keep their "dead" label.

To reproduce, type the tilde character into the "Sample and clipboard:" field. You should see the ~ character marked blue in the field and some keys lighting up yellow, among others the space key and the n key. Press space. The field should now contain the ~ character, unmarked. In ~50% of the cases the keys stay yellow, unexpectedly. If in that case you press tilde again, it will display the normal keys and not the yellow dead keys, again unexpectedly. The keys work correctly though. Same for acute, grave and circumflex.

This is at hrev36330 on real hardware, experienced with German and German (Mac) keymaps, with 105-key and Apple keyboard layouts.

Change History (5)

comment:1 by Disreali, 15 years ago

Cc: mdisreali@… added
Priority: lownormal

There is also an issue with the American Keymap in hrev36336. The tilda key and apostrophe key now act as dead keys when they should not. possibly due to changeset hrev36328. In my testing, the tilda and apostrophe keysdo not act as dead keys on the US-International keymap where I remember that they did in the past.

Experienced on real hw, hrev36330 and hrev36336, American keymap, Generic 104-key layout.

comment:2 by axeld, 15 years ago

To Disraeli: those are very different issues, please don't add things like this as a comment to some bug, but create a new ticket for it.

comment:3 by bobrost, 15 years ago

Confirming similar behavior to andreasf. Using hrev36388 on real hardware with 104-key keyboard. Behavior persists with both 104 and 105 key setting, in American, US-International, and Dvorak keymaps.

comment:4 by Disreali, 14 years ago

Issue reported is still experienced on hrev38693 gcc2 hybrid.

comment:5 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48379.

Note: See TracTickets for help on using tickets.